﻿fixed bug with missing inspector window in Unity 2019.2.*