@@ -1,1 +1,2 @@
-﻿fixed bug with missing inspector window in Unity 2019.2.*
+﻿move settings to "Edit -> Preferences..." menu
+add "Update" button in 'Preferences...' window
